:construction: Preview pages font and spacing fix ongoing

--- a/src/app.css
+++ b/src/app.css
@@ -135,23 +135,22 @@
   }
 
   /* Preview */
-
   .preview_container {
     @apply flex h-[100dvh] w-full flex-col bg-white max-lg:mt-[1rem] max-lg:rounded-t-[0.94rem] lg:flex-row;
   }
   .preview_content_wrapper {
-    @apply flex-[100%] overflow-scroll lg:flex-[calc(100%-600px)] xl:flex-[calc(100%-810px)];
+    @apply flex-[100%] overflow-scroll lg:flex-[calc(100%-600px)] xl:flex-[calc(100%-785px)];
   }
 
   .preview_content_container {
-    @apply px-[1.25rem] pb-[5rem] lg:px-[6rem] lg:pb-[8rem] lg:pt-[4rem];
+    @apply px-[1.25rem] pb-[5rem] lg:px-[8rem] lg:pb-[6rem] lg:pt-[6rem];
   }
 
   .preview-h-1 {
-    @apply text-[2.1875rem] font-light  md:text-[2.5rem];
+    @apply text-[2rem] font-medium leading-[115.5%] tracking-[0.04rem];
   }
   .preview-h-2 {
-    @apply text-[0.938rem] font-light leading-[1.5];
+    @apply text-[1.25rem] font-medium leading-[128.5%] tracking-[0.025rem];
   }
   .preview-h-3 {
     @apply text-[1.25rem] tracking-[0.025rem];
